Changed --add-modules parameter in wsimport bat launcher