@@ -68,7 +68,7 @@ rem Extend wsimport options with options specific to modular JDK
 set RUN_OPTS=%WSIMPORT_OPTS%
 %JAVA% -cp "%JAXWS_HOME%\lib\jaxws-rt.jar" com.sun.xml.ws.util.ModuleHelper
 if %ERRORLEVEL% == 0 goto LAUNCH
-set RUN_OPTS=-addmods java.xml.ws %RUN_OPTS%
+set RUN_OPTS=--add-modules java.xml.ws %RUN_OPTS%
 
 :LAUNCH
 %JAVA% %RUN_OPTS% -jar "%JAXWS_HOME%\lib\jaxws-tools.jar" %*
